--- a/Task-2/Task-2.ipynb
+++ b/Task-2/Task-2.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Author : Y Manjunatha\n",
+    "### DataScience and Businuess Analytics \n",
+    "### Task-2 Unsupervised ML - K-Means-Clustering"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
